# Asgard-HL-Basisstrategy

./: .env.example  .gitignore  GETTING_STARTED.md  HEALTHCHECK_REPORT.md  HOUSEKEEPING_REPORT.md  README.md  REMEDIATION_PLAN.md  REMEDIATION_TRACKER.md  SECURITY.md  TESTING_PLAN.md  docker-compose.prod.yml  future-releases.md  pytest.ini  requirements.txt  run_bot.py  run_dashboard.py  spec-dashboard.md  spec-onboarding.md  test-check.md  tracker-dashboard.md  tracker.md
backend/: pyproject.toml
backend/dashboard/: __init__.py  auth.py  bot_bridge.py  cache.py  config.py  dependencies.py  events_manager.py  main.py  privy_client.py  security.py
bot/: pyproject.toml
bot/core/: __init__.py  autonomous_scanner.py  bot.py  fill_validator.py  intent_scanner.py  internal_api.py  kill_switch.py  lst_monitor.py  opportunity_detector.py  pause_controller.py  position_manager.py  position_monitor.py  position_sizer.py  price_consensus.py  risk_engine.py  user_risk_manager.py
bot/services/: deposit_reconciler.py  gas_funder.py
bot/state/: persistence.py  state_machine.py
bot/venues/: privy_signer.py  server_wallets.py  solana_transferor.py  user_context.py
shared/: pyproject.toml  redis_client.py
shared/auth/: internal_jwt.py
shared/chain/: arbitrum.py  outage_detector.py  solana.py
shared/common/: __init__.py  schemas.py
shared/config/: assets.py  risk.yaml  settings.py  strategy_defaults.py  wallet_policies.py
shared/db/: __init__.py  database.py  migrations.py
shared/models/: common.py  funding.py  opportunity.py  position.py
shared/utils/: logger.py  (+1 more)
(+386 files in other folders)
