[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asgard-backend"
version = "0.1.0"
description = "Asgard Basis - FastAPI Dashboard"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "python-multipart>=0.0.6",
    "privy>=0.22.0",
    "httpx>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["dashboard"]
