[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asgard-bot"
version = "0.1.0"
description = "Asgard Basis - Trading Engine"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.8.0",
    "websockets>=11.0",
    "solana>=0.30.0",
    "solders>=0.18.0",
    "eth-account>=0.8.0",
    "web3>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["core", "venues", "state"]
